Refactor `JpaRepositoryDataStore`, `ReferenceFieldConfiguration`, and related entity handling to support multiple filter fields, improve type conversion, and enhance annotation configurations.